specs/001-typescript-to-zig-native/examples/invalid/import-named.ts
import { add } from "./math.ts";

console.log(1);
